# montpellier-bike-data-pipeline

./: .gcloudignore  .gitignore  README.md  dbt_project.yml  main.py  profiles.yml  pyproject.toml
.github/workflows/: dbt_production.yml
cloud_functions/: requirements.txt
dbt_project/: profiles.yml
dbt_project/models/marts/: bike_availability.sql
dbt_project/models/staging/: src_bikes.yml
models/marts/: bike_availability.sql  marts.yml
models/staging/: stg_bikes.sql
