[project]
name = "montpellier-bike-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "functions-framework>=3.10.0",
    "google>=3.0.0",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=3.8.0",
    "requests>=2.32.5",
]
